fixes #9; no overlapping of UI elements

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -74,7 +74,7 @@ div.links {
     }
   }
 
-  @include breakpoint('l') {
+  @include breakpoint('xl') {
     position: absolute;
     bottom: 2 * $cube;
   }
